# Neural-Network

./: CMakeLists.txt  Header File
dataset/: fer2013.csv
haarcascade/: frontalface.xml
include/: EmotionDetector.h  Logger.h
models/: weights.txt
src/: EmotionDetector.cpp  Logger.cpp  detect  detect.cpp  emotion_detector.h  face_detector.h  main.cpp  neural_network.h  preprocess  preprocess.cpp  train  train.cpp
